Added elements for display dictionary, implemented simple logic

--- a/popup.html
+++ b/popup.html
@@ -7,8 +7,14 @@
 	</head>
 
 	<body>
-		<div class="key-word-input-block">Add key word: <input id="keyWordInput"></div>
-		<div class="dictionary-block" id="dictionary"></div>
+		<div class="key-word-input-block">
+			Add key word: <input id="keyWordInput">
+			<button id="addButton">Add</button>
+		</div>
+		
+		<ul class="dictionary-block" id="dictionary">			
+		</ul>
+		
 		<button id="applyButton">Apply</button>
 		<button id="offButton">Off</button>
 	</body>
