Implemented dictionary functionality

--- a/popup.html
+++ b/popup.html
@@ -7,15 +7,19 @@
 	</head>
 
 	<body>
-		<div class="key-word-input-block">
-			Add key word: <input id="keyWordInput">
+		<div class="keyword-input-block">
+			Add key word: <input id="keywordInput">
 			<button id="addButton">Add</button>
+		</div>
+		
+		<div class="buttons-block">
+			<button id="applyButton">Apply</button>
+			<button id="offButton">Off</button>
+			<button id="clearButton">Clear</button>
 		</div>
 		
 		<ul class="dictionary-block" id="dictionary">			
 		</ul>
-		
-		<button id="applyButton">Apply</button>
-		<button id="offButton">Off</button>
+
 	</body>
 </html>
