--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 	 	<meta charset="UTF-8"> 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="jquery.1.10.2.min.js"></script>
 		<script src="popup.js"></script>
 		<link rel="stylesheet" href="styles.css"/>
 	</head>
